file updated with  table

--- a/fileforwin.html
+++ b/fileforwin.html
@@ -9,12 +9,12 @@
                                         </tr>
                                         <tr>
                                                             <td>&nbsp;</td>
-                                                            <td>&nbsp;</td>
+                                                            <td>&nbsp;dlfks;lfdk;ldsafk;</td>
                                                             <td>&nbsp;</td>
                                         </tr>
                                         <tr>
                                                             <td>&nbsp;</td>
-                                                            <td>&nbsp;</td>
+                                                            <td>&nbsp;jealkdfjdslfjslak</td>
                                                             <td>&nbsp;</td>
                                         </tr>
                     </tbody>
