--- a/createdinWin.html
+++ b/createdinWin.html
@@ -42,9 +42,14 @@
       <div class="row">
         <div class="col-12">
           <div class="jumbotron">
-            <h1 class="text-center">Lorem ipsum dolor sit amet, consectetur.</h1>
-            <div class="row justify-content-center">
-              <div class="col-auto">
+                              <h1 class="text-center">Lorem ipsum&nbsp;</h1>
+                              <h1 class="text-center">&nbsp;</h1>
+                              <h1 class="text-center">sdfsafd</h1>
+                              <h1 class="text-center">&nbsp;</h1>
+                              <h1 class="text-center">&nbsp;</h1>
+                              <h1 class="text-center">safasdfdolor sit amet, consectetur.</h1>
+<div class="row justify-content-center">
+                    <div class="col-auto">
                 <p><a class="btn btn-success btn-lg" href="#" role="button">FREE TRIAL</a> </p>
               </div>
               <div class="col-auto">
