--- a/firstbootstrapgitclone.html
+++ b/firstbootstrapgitclone.html
@@ -17,12 +17,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
+                              <li class="nav-item active"> <a class="nav-link" href="#">Hoafsadfdsaf</a></li>
+                              <li class="nav-item active">&nbsp;</li>
+                              <li class="nav-item active"><a class="nav-link" href="#">safsafsdf</a></li>
+                              <li class="nav-item active">&nbsp;</li>
+                              <li class="nav-item active"><a class="nav-link" href="#">safsdme <span class="sr-only">(current)</span></a> </li>
+<li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+</li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drodsfsfdpdown</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
