--- a/gitclone.html
+++ b/gitclone.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<h2>This is the content for Layout H2 Tag</h2>
+<h2>This is the conteent for Layout H2 Tag</h2>
 </body>
 </html>
