--- a/multiplepages.html
+++ b/multiplepages.html
@@ -11,7 +11,12 @@
 <body>
 <div data-role="page" id="page">
   <div data-role="header" data-theme="e">
-    <h1>Page 1 sadfasfsafasdf&nbsp; asdfsf</h1>
+    <h1>Page 1 sadfasfsafasd</h1>
+    <h1>&nbsp;</h1>
+    <h1>sadfasdf</h1>
+    <h1>&nbsp;</h1>
+    <h1>&nbsp;</h1>
+    <h1>f&nbsp; asdfsf</h1>
   </div>
   <div data-role="content">
     <ul data-role="listview" data-theme="d">
@@ -22,7 +27,14 @@
   
   </div>
   <div data-role="footer">
-    <h4>Footer</h4>
+    <h4>&nbsp;</h4>
+    <h4>&nbsp;</h4>
+    <h4>asdfasfd</h4>
+    <h4>&nbsp;</h4>
+    <h4>&nbsp;</h4>
+    <h4>asdfasf</h4>
+    <h4>&nbsp;</h4>
+    <h4>safasFooter</h4>
   </div>
 </div>
 
