--- a/nav_form.html
+++ b/nav_form.html
@@ -17,7 +17,12 @@
     <div data-role="collapsible-set">
       <div data-role="collapsible">
         <h3>collapsible Block</h3>
-        <p>Our graded support matrix was created over a year ago based on our goals as a project and since that time, we’ve been refining our grading system based on real-world device testing and the quickly evolving mobile landscape. To provide a quick summary of our browser support in Beta 1, we’ve created a simple A (full), B (full minus Ajax), C (basic) grade system with notes of the actual devices and versions we’ve been testing on in our lab.</p>
+        <p>Our graded support matrix was created over a year ago based onsdfsadf our goals as a project and since that time, we’ve been refining our grading system based on real-world device testing and the quickly evolving mobile landscape. To provide a quick summary of our browser support in Beta 1, we’ve created a simple A (full), B (full minus Ajax), C (basic) grade system with notes of the actual devices and versions we’ve been testing on in our lab.sdfsafd<br>
+          <br>
+          sdkfjsklfj<br>
+          sfjlskadf <br>
+          <br>
+        </p>
       </div>
       <div data-collapsed="true" data-role="collapsible" data-theme="b">
         <h3>Header</h3>
