--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
 <div class="container">
   <header>
     <div class="primary_header">
-      <h1 class="title"> SIMPLE Tsdflkjsd</h1>
+      <h1 class="title"> New FIle</h1>
       <h1 class="title">itle</h1>
     </div>
     <nav class="secondary_header" id="menu">
