--- a/MACbootstrpfiled.html
+++ b/MACbootstrpfiled.html
@@ -17,7 +17,8 @@
 <div class="container">
   <header>
     <div class="primary_header">
-      <h1 class="title"> New changes&nbsp;</h1>
+      <h1 class="title"> again making changes</h1>
+      <p>&nbsp;</p>
     </div>
     <nav class="secondary_header" id="menu">
       <ul>
