--- a/list_context.html
+++ b/list_context.html
@@ -11,7 +11,8 @@
 <body>
 <div data-role="page" id="page">
   <div data-role="header" data-theme="b">
-    <h1>Header</h1>
+    <h1>Header sadfasdf</h1>
+    <p>&nbsp;</p>
   </div>
   <div data-role="content">
     <ul data-counttheme="e" data-dividertheme="e" data-inset="true" data-role="listview"  data-theme="d" data-spliticon="star" data-splittheme="a">
