--- a/bootstrapfile.html
+++ b/bootstrapfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Agency Page Template</title>
@@ -14,7 +14,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"> <a class="nav-link" href="#">Hojlkdjlkdsajflsdjflsajdlme <span class="sr-only">(current)</span></a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
           <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
@@ -40,10 +40,7 @@
               <h1 class="text-center">Lorem ipsum dolor sit amet</h1>
               <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta, cupiditate consequatur necessitatibus quos libero eius ipsum qui sit molestiae.</p>
               <p>&nbsp;</p>
-              <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn moresadfsdf</a></p>
-              <p class="text-center">&nbsp;</p>
-              <p class="text-center">&nbsp;</p>
-              <p class="text-center">sadfsdf&nbsp;</p>
+              <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
             </div>
           </div>
         </div>
