--- a/git.html
+++ b/git.html
@@ -18,6 +18,9 @@
   <header>
     <div class="primary_header">
       <h1 class="title"> SIMPLE</h1>
+      <p>dsa</p>
+      <p>as</p>
+      <p>dff&nbsp;</p>
     </div>
     <nav class="secondary_header" id="menu">
       <ul>
